# DataStructure_Review

./: CMakeLists.txt  README.md  main.c
structure/: array.c  array.h  heap.c  heap.h  list.c  list.h  stack.c  stack.h  tree.c  tree.h
